Solved CORS Problem when connecting socket

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         background: #cfd1e1;
       }
     </style>
+    <script>global = globalThis</script>
   </head>
   <body>
     <div id="app"></div>
